# epiphanyDB

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  README_CN.md
.github/workflows/: codeql.yml
client/: CMakeLists.txt  client.cpp
cmake/: clean.txt.in
debug/html/: debug_cache.html  debug_page.html
debug/html/backend/api/: routes.py
debug/html/frontend/src/: index.html
debug/html/frontend/src/js/: app.js  websocket-client.js
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  EPIPHANYDB_NEW_ARCHITECTURE.md  GETTING_STARTED.md  HYPERCONVERGED_ARCHITECTURE.md  MULTI_STORAGE_ENGINE_DESIGN.md  PERFORMANCE_GUIDE.md  POSTGRES_INTEGRATION.md  POSTGRES_MIGRATION.md  TESTING.md  USER_GUIDE.md  YMATRIX_ARCHITECTURE.md
docs/assets/: common_model.smm  functions.smm  model.drawio  module_arch.drawio
docs/design/: hyperconverged_architecture.md
docs/design/common/: README.md  config_doc.md
docs/design/os/: README.md  directory_structure.md
docs/user/: user_capi.md
docs/website/: docusaurus.config.ts  package-lock.json  package.json
docs/website/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2019-05-29-数据库内核入门-01 - 开篇.md  2019-05-29-数据库内核入门-01 - 开篇.mdx  2019-05-30-数据库内核入门-02 - 存储引擎(1).mdx  2019-05-31-数据库内核入门-03 - 存储引擎(2).mdx  2019-06-01-数据库内核入门-04 - 事务管理.md  2019-06-02-数据库内核入门-05 - 查询处理与优化.md  2021-05-29-数据库内核入门-01 - 开篇.mdx  2021-05-30-数据库内核入门-02 - 存储引擎(1).mdx  2021-05-31-数据库内核入门-03 - 存储引擎(2).mdx  2021-06-01-数据库内核入门-04 - 事务管理.md  2021-06-02-数据库内核入门-05 - 查询处理与优化.md  2021-08-01-mdx-blog-post.mdx  authors.yml  tags.yml
docs/website/blog/2021-08-26-welcome/: index.md
docs/website/docs/: intro.md
docs/website/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs/website/src/components/TerminalAnimation/: index.tsx  styles.module.css
docs/website/src/css/: custom.css
docs/website/src/pages/: index.module.css  index.tsx
docs/website/src/theme/Navbar/: index.tsx
examples/c/: CMakeLists.txt  base.c
include/: epiphany.h  epiphanydb.h
include/epiphanydb/storage/: storage_manager.h
postgresql/contrib/epiphanydb/: Makefile  epiphanydb--1.0.sql  epiphanydb.c  epiphanydb.control  storage_manager.c  storage_manager.h
src/: CMakeLists.txt  connect_api.cpp  epiphany.cpp  epiphany_config.cpp  epiphanydb_core.c  global.cpp
src/bufferpool/: CMakeLists.txt
src/bufferpool/src/: pager.cpp
src/common/: CMakeLists.txt  common.cpp  dynamiclib.cpp  log.cpp
src/common/cache/: CMakeLists.txt
src/common/cache/include/: lru_policy.hpp  lruk_policy.hpp
src/common/cache/src/: cache.cpp  lru_policy.cpp  lruk_policy.cpp
src/common/config/: CMakeLists.txt
src/common/config/src/: config.cpp
src/common/mem_manager/: CMakeLists.txt
src/common/mem_manager/include/: epiphany_mem_manager.hpp  no_mem_manager.hpp
src/common/mem_manager/src/: epiphany_mem_manager.cpp  mem_manager.cpp  no_mem_manager.cpp
src/include/: api.hpp  epiphany_config.hpp  epiphany_internal.hpp  index.hpp  misc.hpp
src/include/bufferpool/: page.hpp  pager.hpp
src/include/common/: allocator.hpp  cache.hpp  common.h  config.hpp  dynamiclib.hpp  epiphany_types.hpp  file_manager.hpp  log.hpp  macros.hpp  mem_manager.hpp  types.h
src/include/os/: dlh.hpp  file.hpp  mem.h  mutex.hpp  thread.hpp  time.hpp
src/include/table/: record.hpp
src/include/util/: bitmap.hpp  linked_list.h  linked_list.hpp  stack.h
src/index/include/: bplustree.h
src/os/: CMakeLists.txt
src/os/core/: cpu.h  os_cfg.h  os_core.c  os_cpu_a copy.s  os_cpu_a.s  os_cpu_c.c  os_internal.h  os_task.c  os_var.c
src/os/core/mem/: CMakeLists.txt
src/os/core/mem/include/: mem_allocator.hpp  mem_allocator_tlsf.hpp
src/os/core/mem/src/: mem_allocator_tlsf.cpp
src/os/posix/: CMakeLists.txt  posix_dlh.cpp  posix_file.cpp  posix_mem.cpp  posix_mutex.cpp  posix_thread.cpp  posix_time.cpp
src/storage/: columnar_storage.c  graph_storage.c  heap_storage.c  storage_manager.c  timeseries_storage.c  vector_storage.c
src/storage/columnar_engine/: columnar_storage.c  columnar_storage.h
src/storage/graph_engine/: graph_storage.c  graph_storage.h
src/storage/heap_engine/: heap_storage.c  heap_storage.h
src/storage/timeseries_engine/: timeseries_storage.c  timeseries_storage.h
src/storage/vector_engine/: vector_storage.c  vector_storage.h
src/table/include/: datastore.hpp  datastore_bt.hpp  datastore_heap.hpp  record.hpp
src/table/src/: datastore_bt.cpp
src/tests/: test_storage_engines.c
src/util/: CMakeLists.txt  linked_list.c
tests/: test_multi_storage_engines.c
tests/unit/: CMakeLists.txt
tests/unit/common/: CMakeLists.txt  common_test.cpp
tests/unit/common/cache/: cache_test.cpp
tests/unit/common/config/: config_test.cpp
tests/unit/common/mem_manager/: mem_manager_test.cpp
tests/unit/os/: CMakeLists.txt  file_test.cpp  mutex_test.cpp
tests/unit/util/: CMakeLists.txt  linked_list_c_test.c  main.c  util_test.h
